--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -91,7 +91,23 @@ acronym {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
+
 /* Utilities Class */
 .pointer {
   cursor: pointer;
+}
+
+/* Webkit Scrollbar */
+
+::-webkit-scrollbar {
+  /* width: 0.625rem; */
+  width: 1px;
+}
+::-webkit-scrollbar-track {
+  /* background-color: white; */
+  background: transparent;
+}
+::-webkit-scrollbar-thumb {
+  background: var(--bg-color);
+  border-radius: 0.625rem;
 }
