--- a/frontend/src/Components/Container/style.css
+++ b/frontend/src/Components/Container/style.css
@@ -7,7 +7,7 @@
 
 .container_data{
     width: 650px;
-    /* min-height: 100vh; */
+    min-height: 100vh;
     width: 650px;
     padding: 20px;
     background: red;
