--- a/frontend/src/Components/Navbar/style.css
+++ b/frontend/src/Components/Navbar/style.css
@@ -20,7 +20,7 @@ nav {
 }
 .logo{
   font-size: 30px;
-  opacity: 0.6;
+  /* opacity: 0.6; */
 }
 .mobile-nav-container {
   position: fixed;
@@ -47,6 +47,7 @@ nav {
   position: absolute;
   right: 0.5rem;
   top: -11px;
+  fill: var(--white)
 }
 
 .desktop-navbar {
@@ -64,24 +65,21 @@ nav {
 }
 
 .navitems a{
-    opacity: 0.6;
+    /* opacity: 0.6; */
     cursor: pointer;
     transition: 0.3s;
     text-decoration: none;
     color: var(--white);
 }
 
-.navitems a:hover{
-    opacity: 1;
-}
 
 .mobnavitems{
   display: flex;
   flex-direction: column;
 }
 .mobnavitems a{
-    margin: 20px 0px;
-    opacity: 0.6;
+    margin: 15px 0px;
+    /* opacity: 0.6; */
     flex-direction: column;
     color: var(--white);
     text-decoration: none;
