--- a/frontend/src/Components/Navbar/style.css
+++ b/frontend/src/Components/Navbar/style.css
@@ -44,7 +44,7 @@ nav {
   width: 5rem;
   z-index: 99999999;
   cursor: pointer;
-  position: absolute;
+  position: fixed;
   right: 0.5rem;
   top: -11px;
   fill: var(--white)
