--- a/frontend/src/Components/Navbar/style.css
+++ b/frontend/src/Components/Navbar/style.css
@@ -71,6 +71,9 @@ nav {
     text-decoration: none;
     color: var(--white);
 }
+.navitems p, .mobnavitems p{
+  cursor: pointer;
+}
 
 
 .mobnavitems{
