--- a/frontend/src/Pages/Profile/style.css
+++ b/frontend/src/Pages/Profile/style.css
@@ -1,5 +1,5 @@
 .window {
-  height: 360px;
+  min-height: 360px;
   border-radius: 10px;
   overflow: hidden;
   /* box-shadow: 0 1px 1px hsl(0deg 0% 0% / 0.075),
